--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,14 @@
 # dependencies
 /node_modules
-/.pnp
-.pnp.js
 
 # testing
-/coverage
 /.vscode
 
 # production
 /build
+
+# Api Key
+.env
 
 # misc
 .DS_Store
