--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "axios": "^0.21.4",
     "hamburger-react": "^2.4.1",
     "react": "^17.0.2",
-    "react-burger-menu": "^3.0.6",
     "react-dom": "^17.0.2",
+    "react-intersection-observer": "^8.32.1",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
